fixed gap

--- a/css/queries.css
+++ b/css/queries.css
@@ -188,7 +188,7 @@
   }
   .heading-secondary{
     font-size: 1.8rem;
-    margin-bottom: 4.8rem;
+    margin-bottom: 3.2rem;
   }
   .heading-tertiary{
     font-size:1.6em;
@@ -220,6 +220,7 @@
   }
   .project-description{
     font-size: 1.4rem;
+    margin-bottom: 3.2rem;
   }
   .text-box{
     text-align: left;
